add: README and screenshots

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </article>
   </main>
   <footer class="attr">
-    <small>Challenge by <a href="https://www.frontendmentor.io/challenges" class="attr__link">Frontend Mentor</a> - Coded by <a href="https://github.com/mendez-v/frontend-mentor/tree/main/profile-card-comp" class="attr__link">VIMP</a> ✨</small>
+    <small>Challenge by <a href="https://www.frontendmentor.io/challenges" class="attr__link" target="_blank" rel="noreferrer">Frontend Mentor</a> - Coded by <a href="https://github.com/mendez-v/profile-card-component" class="attr__link" target="_blank" rel="noreferrer">VIMP</a> ✨</small>
   </footer>
 </body>
 </html>
