add: meta tags and thumbnail

--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <title>Profile Card Component</title>
+  <meta name="description" content="This is a perfect challenge to test your layout skills. The card layout doesn't shift, so it's also great for those that haven't dived into responsive websites yet!">
+
+  <meta property="og:url" content="https://mendez-v.github.io/profile-card-component/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Profile Card Component">
+  <meta property="og:description" content="This is a perfect challenge to test your layout skills. The card layout doesn't shift, so it's also great for those that haven't dived into responsive websites yet!">
+  <meta property="og:image" content="https://raw.githubusercontent.com/mendez-v/profile-card-component/main/assets/image/thumbnail.png">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="mendez-v.github.io">
+  <meta property="twitter:url" content="https://mendez-v.github.io/profile-card-component/">
+  <meta name="twitter:title" content="Profile Card Component">
+  <meta name="twitter:description" content="This is a perfect challenge to test your layout skills. The card layout doesn't shift, so it's also great for those that haven't dived into responsive websites yet!">
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/mendez-v/profile-card-component/main/assets/image/thumbnail.png">
+
   <link rel="icon" href="./assets/icon/favicon-32x32.png">
   <link rel="apple-touch-icon" href="./assets/icon/favicon-32x32.png">
+
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
